--- a/src/app/software/component/setup-project-detail/setup-project-detail.component.html
+++ b/src/app/software/component/setup-project-detail/setup-project-detail.component.html
@@ -1,1 +1,84 @@
-<p>setup-project-detail works!</p>
+<div *ngIf="isSpinnerShow" style="padding: 100px 0px 15px 0px; text-align: center;">
+    <h4>Please wait...</h4>
+    <mat-spinner style="margin:auto;display:block;"></mat-spinner>
+</div>
+<div *ngIf="isContentShow">
+    <mat-toolbar>
+        &nbsp;&nbsp;
+        <img src="../../../../assets/images/software-icons/project.png" class="toolBar-img-style" />
+        <span class="toolbar-title-style">
+            Project Detail
+        </span>
+        <span class="toolbar-spacer"></span>
+        <button mat-flat-button color="primary" [disabled]="isProjectSaveButtonDisabled" style="margin-right: 5px;"
+            (click)="buttonSaveProject()">
+            Save
+        </button>
+        <button mat-flat-button color="primary" [disabled]="isProjectLockButtonDisabled" style="margin-right: 5px;"
+            (click)="buttonLockProject()">
+            Lock
+        </button>
+        <button mat-flat-button color="primary" [disabled]="isProjectUnlockButtonDisabled" style="margin-right: 5px;"
+            (click)="buttonUnlockProject()">
+            Unlock
+        </button>
+        <button mat-flat-button color="warn" routerLink="/software/setup-project-list">
+            Close
+        </button>
+    </mat-toolbar>
+    <mat-divider></mat-divider>
+    <div class="software-container">
+        <div fxLayout="row" fxLayout.xs="column">
+            <div fxFlex="25" style="padding: 5px;">
+                <mat-form-field appearance="fill" style="width: 100%;">
+                    <mat-label>Project Code</mat-label>
+                    <input matInput [(ngModel)]="mstProjectModel.ProjectCode" [ngModelOptions]="{standalone: true}"
+                        disabled>
+                </mat-form-field>
+            </div>
+            <div fxFlex="75" style="padding: 5px;">
+
+            </div>
+        </div>
+        <div fxLayout="row" fxLayout.xs="column">
+            <div fxFlex="75" style="padding: 5px;">
+                <mat-form-field appearance="fill" style="width: 100%;">
+                    <mat-label>Project</mat-label>
+                    <input matInput [(ngModel)]="mstProjectModel.Project" [ngModelOptions]="{standalone: true}"
+                        [disabled]="mstProjectModel.IsLocked">
+                </mat-form-field>
+            </div>
+            <div fxFlex="25" style="padding: 5px;">
+
+            </div>
+        </div>
+        <div fxLayout="row" fxLayout.xs="column">
+            <div fxFlex="75" style="padding: 3px;">
+                <mat-form-field appearance="fill" style="width: 100%;">
+                    <mat-label>Address</mat-label>
+                    <textarea matInput [(ngModel)]="mstProjectModel.Address" [ngModelOptions]="{standalone: true}"
+                        style="min-height: 73px;" [disabled]="mstProjectModel.IsLocked"></textarea>
+                </mat-form-field>
+            </div>
+            <div fxFlex="25" style="padding: 5px;">
+
+            </div>
+        </div>
+        <div fxLayout="row" fxLayout.xs="column">
+            <div fxFlex="25" style="padding: 3px;">
+                <mat-form-field appearance="fill" style="width: 100%;">
+                    <mat-label>Status</mat-label>
+                    <mat-select [(value)]="mstProjectModel.Status" [disabled]="mstProjectModel.IsLocked">
+                        <mat-option *ngFor="let sysDropdownObject of sysDropdownModel"
+                            [value]="sysDropdownObject.Value">
+                            {{sysDropdownObject.Description}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div fxFlex="75" style="padding: 5px;">
+
+            </div>
+        </div>
+    </div>
+</div>
