--- a/src/app/software/component/setup-unit-list/setup-unit-list.component.html
+++ b/src/app/software/component/setup-unit-list/setup-unit-list.component.html
@@ -1,1 +1,111 @@
-<p>setup-unit-list works!</p>
+<div *ngIf="isSpinnerShow" style="padding: 100px 0px 15px 0px; text-align: center;">
+    <h4>Please wait...</h4>
+    <mat-spinner style="margin:auto;display:block;"></mat-spinner>
+</div>
+<div [hidden]="!isContentShow">
+    <mat-toolbar>
+        &nbsp;&nbsp;
+        <img src="../../../../assets/images/software-icons/unit.png" class="toolBar-img-style" />
+        <span class="toolbar-title-style">
+            Unit
+        </span>
+        <span class="toolbar-spacer"></span>
+        <button mat-flat-button color="primary" style="margin-right: 5px;" (click)="buttonAddUnit()"
+            [disabled]="isButtonAddUnitDisabled">
+            Add
+        </button>
+        <button mat-flat-button color="warn" routerLink="/software">
+            Close
+        </button>
+    </mat-toolbar>
+    <mat-divider></mat-divider>
+    <div class="software-container">
+        <div fxLayout="row" fxLayout.xs="column">
+            <div fxFlex="25" style="padding: 3px;">
+                <mat-form-field appearance="fill" style="width: 100%;">
+                    <mat-label>Project</mat-label>
+                    <mat-select [(value)]="selectedProjectId"
+                        (selectionChange)="projectSelectionChange($event)">
+                        <mat-option *ngFor="let mstProjectObject of mstProjectModel" [value]="mstProjectObject.Id">
+                            {{mstProjectObject.Project}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div fxFlex="75" style="padding: 5px;">
+                <mat-form-field appearance="fill" style="width: 100%;">
+                    <mat-label>Filter</mat-label>
+                    <input matInput (keyup)="unitFilter($event)" placeholder="Filter" #unitFilterData />
+                </mat-form-field>
+            </div>
+        </div>
+        <div fxLayout="row" fxLayout.xs="column">
+            <div fxFlex="100" style="padding: 5px;">
+                <mat-table [dataSource]="unitDataSource" #unitSort="matSort" matSort style="overflow-x: scroll;">
+
+                    <ng-container matColumnDef="ButtonEdit">
+                        <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                        <mat-cell fxFlex="100px" *matCellDef="let row">
+                            <button mat-flat-button color="primary" (click)="buttonEditUnit(row)">
+                                Edit
+                            </button>
+                        </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="ButtonDelete">
+                        <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                        <mat-cell fxFlex="100px" *matCellDef="let row">
+                            <button mat-flat-button color="warn" (click)="buttonDeleteUnit(row)">
+                                Delete
+                            </button>
+                        </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="UnitCode">
+                        <mat-header-cell fxFlex="120px" *matHeaderCellDef mat-sort-header> Unit Code
+                        </mat-header-cell>
+                        <mat-cell fxFlex="120px" *matCellDef="let row"> {{row.UnitCode}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Block">
+                        <mat-header-cell fxFlex="125px" *matHeaderCellDef mat-sort-header> Block </mat-header-cell>
+                        <mat-cell fxFlex="125px" *matCellDef="let row"> {{row.Block}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Lot">
+                        <mat-header-cell fxFlex="125px" *matHeaderCellDef mat-sort-header> Lot </mat-header-cell>
+                        <mat-cell fxFlex="125px" *matCellDef="let row"> {{row.Lot}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="HouseModel">
+                        <mat-header-cell fxFlex="250px" *matHeaderCellDef mat-sort-header> House Model
+                        </mat-header-cell>
+                        <mat-cell fxFlex="250px" *matCellDef="let row"> {{row.HouseModel}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Status">
+                        <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
+                        <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Status}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="IsLocked">
+                        <mat-header-cell fxFlex="50px" *matHeaderCellDef mat-sort-header> L </mat-header-cell>
+                        <mat-cell fxFlex="50px" *matCellDef="let row" style="text-align: center !important;">
+                            <mat-checkbox color="primary" [checked]="row.IsLocked" [disableRipple]="true"
+                                (click)="$event.preventDefault()"></mat-checkbox>
+                        </mat-cell>
+                    </ng-container>
+
+                    <mat-header-row *matHeaderRowDef="unitDisplayedColumns"></mat-header-row>
+                    <mat-row *matRowDef="let row; columns: unitDisplayedColumns;"></mat-row>
+
+                    <tr class="mat-row" *matNoDataRow>
+                        <td class="mat-cell" colspan="8">No data matching the filter "{{unitFilterData.value}}"</td>
+                    </tr>
+                </mat-table>
+
+                <mat-paginator #unitPaginator [pageSizeOptions]="[10, 50, 100, 200]"></mat-paginator>
+            </div>
+        </div>
+    </div>
+</div>
