--- a/src/app/software/component/setup-checklist-list/setup-checklist-list.component.html
+++ b/src/app/software/component/setup-checklist-list/setup-checklist-list.component.html
@@ -1,1 +1,113 @@
-<p>setup-checklist-list works!</p>
+<div *ngIf="isSpinnerShow" style="padding: 100px 0px 15px 0px; text-align: center;">
+    <h4>Please wait...</h4>
+    <mat-spinner style="margin:auto;display:block;"></mat-spinner>
+</div>
+<div [hidden]="!isContentShow">
+    <mat-toolbar>
+        &nbsp;&nbsp;
+        <img src="../../../../assets/images/software-icons/checklist.png" class="toolBar-img-style" />
+        <span class="toolbar-title-style">
+            Checklist
+        </span>
+        <span class="toolbar-spacer"></span>
+        <button mat-flat-button color="primary" style="margin-right: 5px;" (click)="buttonAddChecklist()"
+            [disabled]="isButtonAddChecklistDisabled">
+            Add
+        </button>
+        <button mat-flat-button color="warn" routerLink="/software">
+            Close
+        </button>
+    </mat-toolbar>
+    <mat-divider></mat-divider>
+    <div class="software-container">
+        <div fxLayout="row" fxLayout.xs="column">
+            <div fxFlex="25" style="padding: 3px;">
+                <mat-form-field appearance="fill" style="width: 100%;">
+                    <mat-label>Project</mat-label>
+                    <mat-select [(value)]="selectedProjectId" (selectionChange)="projectSelectionChange($event)">
+                        <mat-option *ngFor="let mstProjectObject of mstProjectModel" [value]="mstProjectObject.Id">
+                            {{mstProjectObject.Project}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div fxFlex="75" style="padding: 5px;">
+                <mat-form-field appearance="fill" style="width: 100%;">
+                    <mat-label>Filter</mat-label>
+                    <input matInput (keyup)="checklistFilter($event)" placeholder="Filter" #checklistFilterData />
+                </mat-form-field>
+            </div>
+        </div>
+        <div fxLayout="row" fxLayout.xs="column">
+            <div fxFlex="100" style="padding: 5px;">
+                <mat-table [dataSource]="checklistDataSource" #checklistSort="matSort" matSort
+                    style="overflow-x: scroll;">
+
+                    <ng-container matColumnDef="ButtonEdit">
+                        <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                        <mat-cell fxFlex="100px" *matCellDef="let row">
+                            <button mat-flat-button color="primary" (click)="buttonEditChecklist(row)">
+                                Edit
+                            </button>
+                        </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="ButtonDelete">
+                        <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                        <mat-cell fxFlex="100px" *matCellDef="let row">
+                            <button mat-flat-button color="warn" (click)="buttonDeleteChecklist(row)">
+                                Delete
+                            </button>
+                        </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="ChecklistCode">
+                        <mat-header-cell fxFlex="120px" *matHeaderCellDef mat-sort-header> Checklist Code
+                        </mat-header-cell>
+                        <mat-cell fxFlex="120px" *matCellDef="let row"> {{row.ChecklistCode}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Checklist">
+                        <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Checklist </mat-header-cell>
+                        <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.Checklist}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="ChecklistDate">
+                        <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header> Checklist Date
+                        </mat-header-cell>
+                        <mat-cell fxFlex="100px" *matCellDef="let row"> {{row.ChecklistDate}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Remarks">
+                        <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Remarks
+                        </mat-header-cell>
+                        <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.Remarks}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Status">
+                        <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
+                        <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Status}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="IsLocked">
+                        <mat-header-cell fxFlex="50px" *matHeaderCellDef mat-sort-header> L </mat-header-cell>
+                        <mat-cell fxFlex="50px" *matCellDef="let row" style="text-align: center !important;">
+                            <mat-checkbox color="primary" [checked]="row.IsLocked" [disableRipple]="true"
+                                (click)="$event.preventDefault()"></mat-checkbox>
+                        </mat-cell>
+                    </ng-container>
+
+                    <mat-header-row *matHeaderRowDef="checklistDisplayedColumns"></mat-header-row>
+                    <mat-row *matRowDef="let row; columns: checklistDisplayedColumns;"></mat-row>
+
+                    <tr class="mat-row" *matNoDataRow>
+                        <td class="mat-cell" colspan="8">No data matching the filter "{{checklistFilterData.value}}"
+                        </td>
+                    </tr>
+                </mat-table>
+
+                <mat-paginator #checklistPaginator [pageSizeOptions]="[10, 50, 100, 200]"></mat-paginator>
+            </div>
+        </div>
+    </div>
+</div>
