--- a/src/app/software/component/setup-unit-list/setup-unit-list.component.html
+++ b/src/app/software/component/setup-unit-list/setup-unit-list.component.html
@@ -21,11 +21,10 @@
     <mat-divider></mat-divider>
     <div class="software-container">
         <div fxLayout="row" fxLayout.xs="column">
-            <div fxFlex="25" style="padding: 3px;">
+            <div fxFlex="25" style="padding: 5px;">
                 <mat-form-field appearance="fill" style="width: 100%;">
                     <mat-label>Project</mat-label>
-                    <mat-select [(value)]="selectedProjectId"
-                        (selectionChange)="projectSelectionChange($event)">
+                    <mat-select [(value)]="selectedProjectId" (selectionChange)="projectSelectionChange($event)">
                         <mat-option *ngFor="let mstProjectObject of mstProjectModel" [value]="mstProjectObject.Id">
                             {{mstProjectObject.Project}}
                         </mat-option>
